Fixed font blur/flicker in history
Closes #1486

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -1539,8 +1539,9 @@ a.im_dialog_selected {
   margin-left: 0;
 }
 .im_message_author_admin {
-  color: #999;
+  color: #adadad;
   margin-left: 6px;
+  font-size: 11px;
 }
 
 .im_message_from_photo,
@@ -4064,6 +4065,7 @@ ul.chat_modal_migrate_list {
 
 .im_message_focus_active {
   .im_message_date,
+  .im_message_author_admin,
   .im_message_document_size,
   .audio_player_duration,
   .audio_player_size,
