--- a/app/less/desktop.less
+++ b/app/less/desktop.less
@@ -689,9 +689,11 @@ a.footer_link.active:active {
 
   &_scrollable_wrap {
     /* Hardware acceleration in Safari */
-    -webkit-transform: translateZ(0);
-    -webkit-perspective: 1000;
-    -webkit-backface-visibility: hidden;
+    
+    // Caused flickering and bluring in webkit
+    // -webkit-transform: translateZ(0);
+    // -webkit-perspective: 1000;
+    // -webkit-backface-visibility: hidden;
   }
 }
 
@@ -946,6 +948,7 @@ a.footer_link.active:active {
 .im_message_selected .im_message_audio_duration,
 .im_message_selected .im_message_audio_size,
 .im_message_selected .im_message_fwd_date,
+.im_message_selected .im_message_author_admin,
 .im_message_selected .im_message_views_cnt,
 .im_message_selected .im_message_sign_link,
 .im_history_select_active .im_message_outer_wrap:hover .im_message_date,
@@ -953,6 +956,7 @@ a.footer_link.active:active {
 .im_history_select_active .im_message_outer_wrap:hover .im_message_audio_duration,
 .im_history_select_active .im_message_outer_wrap:hover .im_message_audio_size,
 .im_history_select_active .im_message_outer_wrap:hover .im_message_fwd_date,
+.im_history_select_active .im_message_outer_wrap:hover .im_message_author_admin,
 .im_history_select_active .im_message_outer_wrap:hover .im_message_views_cnt,
 .im_history_select_active .im_message_outer_wrap:hover .im_message_sign_link {
   color: #899daf;
